--- a/SimplonHubApi/SimplonHubApi.csproj
+++ b/SimplonHubApi/SimplonHubApi.csproj
@@ -36,5 +36,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\User\" />
+    <Folder Include="wwwroot\" />
   </ItemGroup>
 </Project>
