--- a/SimplonHubApi/SimplonHubApi.csproj
+++ b/SimplonHubApi/SimplonHubApi.csproj
@@ -12,6 +12,7 @@
     <Utf8Output>true</Utf8Output>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AWSSDK.S3" Version="4.0.13" />
     <PackageReference Include="Bogus" Version="35.6.4" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.8.22" />
     <PackageReference Include="Hangfire.Core" Version="1.8.22" />
